# symfit

./: .coveragerc  .gitignore  .readthedocs.yml  .travis.yml  .zenodo.json  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  MANIFEST  README.md  README.rst  pytest.ini  requirements-py2.txt  requirements.txt  requirements_docs.txt  requirements_test.txt  setup.cfg  setup.py  tests.py
.github/workflows/: deploy_pypi.yml  deploy_pypi_test.yml  generate_docs.yml  test.yaml  test.yml  test_and_coveralls.yml  test_no_coveralls.yaml  test_symmip.yaml
contrib/interactive_fit/: interactive_fit.py
core/: api.py  argument.py  fit.py  leastsqbound.py
docs/: Makefile  api_structure.rst  conf.py  dependencies.rst  fitting.rst  fitting_types.rst  index.rst  installation.rst  intro.rst  likelihood.rst  linear_subproblems.rst  make.bat  module_docs.rst  quickstart.rst  sigma.rst  style_guide.rst  technical_notes.rst  tutorial.rst
docs/_build/: .buildinfo  dependencies.html  fitting_types.html  genindex.html  how_does_it_work.html  index.html  installation.html  intro.html  likelihood.html  module_docs.html  objects.inv  py-modindex.html  quickstart.html  r_squared.html  search.html  searchindex.js  sigma.html  technical_notes.html  tutorial.html
docs/examples/: ex_CallableNumericalModel.rst  ex_CallableNumericalModel_ode.ipynb  ex_ODEModel.rst  ex_ODE_CallableNumericalModel.rst  ex_bivariate_likelihood.ipynb  ex_bivariate_likelihood.rst  ex_fourier_series.rst  ex_interactive_guesses_ODE.rst  ex_interactive_guesses_nD.rst  (+9 more)
examples/: bivariate_likelihood.py  callable_numerical_model.py  fourier_series.py  gaussian.py  global_fitting.py  linear_model_fit.py  multidataset_likelihood.py  ode_CallableNumericalModel.py  ode_reaction_kinetics_simple.py  ode_reaction_multicomponent.py  piecewise.py  piecewise2.py  poly_surface_fit.py
symfit/: __init__.py  api.py  distributions.py  functions.py
tests/: __init__.py  auto_variables.py  helper_functions.py  hypothesis_helpers.py  test_analytical_fit.py  test_argument.py  test_auto_fit.py  test_constrained.py  test_constrained_py.py  test_distributions.py  test_distributions_py.py  test_finite_difference.py  test_finite_difference_py.py  test_fit_result.py  test_fit_result_py.py  test_general.py  test_general_py.py  test_global.py  test_global_opt.py  test_global_opt_py.py  test_hypothesis.py  test_indexed_variables.py  test_linear_solvers.py  test_minimize.py  test_minimize_py.py  test_minimizers.py  test_minimizers_py.py  test_mip.py  test_model.py  test_model_py.py  test_new_fit.py  test_objectives.py  test_objectives_py.py  test_ode.py  test_ode_py.py  test_support.py  test_support_py.py  test_tf_minimizers.py
tools/: interactive_fit.py
(+103 files in other folders)
