[metadata]
name = symfit
summary = Symbolic Fitting; fitting as it should be.
description-file = README.rst
author = Martin Roelfs
author_email = m.roelfs@student.rug.nl
home-page = https://github.com/tBuLi/symfit
license = MIT
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
keywords = fit fitting symbolic

[bdist_wheel]
universal=1

[extras]
contrib = 
    matplotlib
# all should be a complete list of all dependencies of all other extras. How to
# automate this?
all =
    matplotlib
