[metadata]
name = symfit
summary = Symbolic Fitting; fitting as it should be.
description-file = README.rst
author = Martin Roelfs
author_email = martin.roelfs@kuleuven.be
home-page = https://github.com/tBuLi/symfit
license = MIT
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
keywords = fit fitting symbolic

[bdist_wheel]
universal=1

[extras]
contrib = 
    matplotlib >= 2.0
# all should be a complete list of all dependencies of all other extras. How to
# automate this?
all =
    matplotlib >= 2.0
