[metadata]
name = symfit
summary = Symbolic Fitting; fitting as it should be.
description_file = README.rst
author = Martin Roelfs
author_email = martin.roelfs@kuleuven.be
home_page = https://github.com/tBuLi/symfit
license = MIT
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11


keywords = fit fitting symbolic

[bdist_wheel]
universal=1

[extras]
contrib = 
    matplotlib >= 2.0
# all should be a complete list of all dependencies of all other extras. How to
# automate this?
all =
    matplotlib >= 2.0
